# DAT

./: .gitignore  config.py  main.py  pyproject.toml  slurm_main.py  train.sh  utils.py
configs/: unicode_dat_base.yaml  unicode_dat_base_patch16.yaml
data/: build.py  character_dataset.py
models/: dat.py  dat_blocks.py  nat.py
scripts/: estimate_batch_size.py  evaluate_unicode.py  train_unicode.sh
