[project]
name = "dat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "editables>=0.5",
    "einops>=0.8.1",
    "hatchling>=1.27.0",
    "matplotlib>=3.9.2",
    "natten==0.21.0+torch270cu128",
    "numpy>=1.26.0",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.5.2",
    "termcolor>=3.1.0",
    "timm>=1.0.20",
    "torch==2.7.0",
    "torchvision==0.22.0",
    "wandb>=0.22.1",
    "wheel>=0.45.1",
    "yacs>=0.1.8",
]

